View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032750 | Open CASCADE | OCCT:Visualization | public | 2021-12-24 20:54 | 2021-12-24 20:54 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Product Version | 7.6.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0032750: Visualization, AIS_Manipulator - selection of moved object is broken | ||||
Description | Attached objects are moved using SetLocationTransformation() method, and selection of moved object doesn't work. | ||||
Steps To Reproduce | - Attach manipulator to object. - Move it half-size right. - Detach manipulator from object. - Try moving cursor above left half object. Result: OK, object is highlighted. - Try moving cursor above right half object. Result: KO, object is not detected. | ||||
Tags | No tags attached. | ||||
Test case number | |||||