0032750: Visualization, AIS_Manipulator - selection of moved object is broken

Completed the stop transform action when dragging manipulator with mouse.
Added context redisplay for update of interactive object sensitive areas.
Added test.